########################################################### -*- Makefile -*- ##
## $Id: Makefile.am 527 2005-04-01 21:28:33Z mdeters $
###############################################################################

EXTRA_DIST = \
	README.allocation_instrumentation \
	jRate-patch.allocation_instrumentation.diff \
	jRate-patch.diff

