########################################################### -*- Makefile -*- ##
## $Id: Makefile.am 527 2005-04-01 21:28:33Z mdeters $
###############################################################################

SUBDIRS = . Thread

check_PROGRAMS = \
	Allocator/test1 \
	Allocator/test2

Allocator_test1_SOURCES = Allocator/test1.cc
Allocator_test2_SOURCES = Allocator/test2.cc
